--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,11 +6,30 @@
   color: rgb(95, 122, 91);
 }
 .listBlock {
-  margin:10px;
-  display: block;
-  line-height: 2em;
+  margin:auto;
+  display: flex;
+  flex-direction: column;
+  align-items:left;
   font-weight: bold;
 }
+
+.listItem {
+  display:flex;
+  justify-content:flex-start;
+  align-items: center;
+  padding: 20px 10px 10px 10px;
+  border-bottom: 1px solid black;
+  font-size: 1.2em;
+}
+
+input[type=checkbox] {
+  margin-right: 3%;
+}
+
+input[type=checkbox] {
+  outline:0;
+}
+
 label{
   cursor: pointer;
 }
